--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Git management for WordPress",
     "main": "revisr.php",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "wp-scripts start",
+        "build": "wp-scripts build"
     },
     "repository": {
         "type": "git",
@@ -14,6 +16,10 @@
     "author": "Expanded Fronts, LLC",
     "license": "GPL-3.0",
     "devDependencies": {
+        "@wordpress/components": "^23.5.0",
+        "@wordpress/element": "^5.5.0",
+        "@wordpress/icons": "^9.19.0",
+        "@wordpress/scripts": "^25.5.1",
         "grunt": "~0.4.2",
         "grunt-wp-i18n": "~0.4.0"
     }
